# encoder-protocol

./: README.md  pyproject.toml
examples/net/: test_client.py  test_server.py
protocol/: __init__.py  buffer.py  deserialize.py  object.py  serialize.py  types.py
